<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <include layout="@layout/common_toolbar" />

    <LinearLayout
        android:id="@+id/llayout_business_choosepark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_88"
        android:layout_marginTop="@dimen/px_24"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_weight="1">
        <TextView
            android:layout_width="@dimen/px_240"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/px_48"
            android:text="@string/business_choosepark"
            android:textSize="@dimen/px_32"/>
        <EditText
            android:id="@+id/et_business_choosepark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/business_choosepark_text"
            android:textSize="@dimen/px_32"
            android:textColor="@color/gray"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/px_24"
            android:src="@mipmap/ic_common_next"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_88"
        android:layout_marginTop="@dimen/px_24"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_weight="1">
        <TextView
            android:layout_width="@dimen/px_240"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/px_48"
            android:text="@string/business_companyname"
            android:textSize="@dimen/px_32"/>
        <EditText
            android:id="@+id/et_business_companyname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/business_companyname_input"
            android:textSize="@dimen/px_32"
            android:textColor="@color/gray"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llayout_business_choosekind"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_88"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_weight="1">
        <TextView
            android:layout_width="@dimen/px_240"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/px_48"
            android:text="@string/business_companykind"
            android:textSize="@dimen/px_32"/>
        <EditText
            android:id="@+id/et_business_companykind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/business_companykind_input"
            android:textSize="@dimen/px_32"
            android:textColor="@color/gray"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/px_24"
            android:src="@mipmap/ic_common_next"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_88"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_weight="1">
        <TextView
            android:layout_width="@dimen/px_240"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/px_48"
            android:text="@string/business_legalperson"
            android:textSize="@dimen/px_32"/>
        <EditText
            android:id="@+id/et_business_legalperson"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/business_legalperson_input"
            android:textSize="@dimen/px_32"
            android:textColor="@color/gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_88"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_weight="1">
        <TextView
            android:layout_width="@dimen/px_240"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/px_48"
            android:text="@string/business_IDCard"
            android:textSize="@dimen/px_32"/>
        <EditText
            android:id="@+id/et_business_IDCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/business_IDCard_input"
            android:textSize="@dimen/px_32"
            android:textColor="@color/gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_88"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_weight="1">
        <TextView
            android:layout_width="@dimen/px_240"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/px_48"
            android:text="@string/business_telnum"
            android:textSize="@dimen/px_32"/>
        <EditText
            android:id="@+id/et_business_telnum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/business_telnum_input"
            android:textSize="@dimen/px_32"
            android:textColor="@color/gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_88"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_weight="1">
        <TextView
            android:layout_width="@dimen/px_240"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/px_48"
            android:text="@string/business_mail"
            android:textSize="@dimen/px_32"/>
        <EditText
            android:id="@+id/et_business_mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/business_mail_input"
            android:textSize="@dimen/px_32"
            android:textColor="@color/gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_208"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/px_48"
            android:text="@string/business_license"
            android:textSize="@dimen/px_32"/>
        <FrameLayout
            android:layout_width="@dimen/px_176"
            android:layout_height="@dimen/px_176"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/px_24">
            <ImageView
                android:id="@+id/iv_business_uploadlicense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark_gray" />
            <TextView
                android:id="@+id/tv_business_uploadhint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/business_upload"
                android:textColor="@color/white"
                android:textSize="@dimen/px_32"/>
        </FrameLayout>
    </LinearLayout>

    <Button
    android:id="@+id/btn_business_companyinfo_next"
    android:layout_width="@dimen/px_702"
    android:layout_height="@dimen/px_88"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/button_bg"
    android:text="@string/nextstep"
    android:textColor="@color/white"
    android:textSize="@dimen/px_32"
    android:layout_weight="1" />

</LinearLayout>
